<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/white">

    <include layout="@layout/top_title_view"
        android:id="@+id/view_top"/>

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/view_top"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:hint="@string/Input_amt_plz"
        android:textColorHint="@color/gray_dde1e4"
        android:inputType="number"
        android:textColor="@color/black_00001f"
        android:textAlignment="center"></EditText>

    <EditText
        android:id="@+id/et_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/et_amount"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:hint="@string/Input_period_plz"
        android:textColorHint="@color/gray_dde1e4"
        android:inputType="number"
        android:textColor="@color/black_00001f"
        android:textAlignment="center"
        android:visibility="gone"></EditText>


    <EditText
        android:id="@+id/et_ref_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/et_period"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:hint="@string/Input_ref_no_plz"
        android:textColorHint="@color/gray_dde1e4"
        android:inputType="number"
        android:textColor="@color/black_00001f"
        android:textAlignment="center"
        android:visibility="gone"></EditText>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_ref_no"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/sharingcube_blue"
        android:text="@string/Next"
        android:textColor="@color/sharingcube_font_black"
        ></Button>
</RelativeLayout>