<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_view"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:layout_marginLeft="24dp"
            android:text="請選取信用卡種類"
            android:textColor="@color/blue_34495e"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14.5dp"
            android:layout_marginRight="14.5dp">

            <LinearLayout
                android:id="@+id/ll_btn_credit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/selector_btn_credit_card"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/credit_card"
                    android:textColor="@color/blue_34495e"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_btn_cup_card"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/selector_btn_cup_card"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cup"
                    android:textColor="@color/blue_34495e"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_btn_smartpay"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/selector_btn_smartpay"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/smartpay"
                    android:textColor="@color/blue_34495e"
                    android:textSize="14dp" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
